# NeuralNetwork

airfoil_self_noise/: main.cpp
airfoil_self_noise2/: CMakeLists.txt
urinary_inflammations_diagnosis/: main.cpp
